--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,128 @@
-* {
+@font-face {
+  font-family: "Mulish";
+  src: local("Mulish"), url("./Styles/Fonts/static/Mulish-Medium.ttf");
+}
+
+:root {
+  --font-family: "Manrope", sans-serif;
+  --gradient-text: linear-gradient(89.97deg, #ae67fa 1.84%, #f49867 102.67%);
+  --gradient-bar: linear-gradient(103.22deg, #ae67fa -13.86%, #f49867 99.55%);
+  --color-bg: #040c18;
+  --color-footer: #031b34;
+  --color-blog: #042c54;
+  --color-text: #81afdd;
+  --color-subtext: #ff8a71;
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  transition: 0.5s;
+
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: "Mulish";
+  background: rgb(8, 21, 41);
+  background: linear-gradient(
+      0deg,
+      rgba(8, 21, 41, 1) 3%,
+      rgba(3, 27, 52, 1) 15%,
+      rgba(4, 44, 84, 1) 100%
+    )
+    no-repeat cover;
+  color: aliceblue;
+  overflow-x: hidden;
+}
+#root {
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden;
+}
+.flex {
+  display: flex;
+}
+.fdir {
+  flex-direction: column;
+}
+.jcb {
+  justify-content: space-between;
+}
+.aic {
+  align-items: center;
+}
+
+.Footer {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+.Footer > h1 {
+  text-align: center;
+  color: transparent;
+  background-image: linear-gradient(10deg, #ae67fa 1.84%, #f49867 102.67%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 3rem;
+}
+.Footer button {
+  background: transparent;
+  padding: 20px 45px;
+  color: white;
+  border: 1px solid white;
+  transition: 0.2s ease-in-out;
+}
+.Footer button:hover {
+  text-decoration: underline;
+  border: 1px solid transparent;
+}
+.contact {
+  display: flex;
+  width: 100%;
+  /* flex-wrap: wrap; */
+  padding: 20px;
+}
+.contact .logo {
+  flex-basis: 60%;
+  padding: 20px;
+}
+
+.links {
+  display: flex;
+  justify-content: space-between;
+  flex-basis: 100%;
+  flex-wrap: wrap;
+}
+.links .link-item p {
+  transition: 0.2s ease-in-out;
+}
+.links .link-item p:nth-of-type(1) ~ p {
+  border-bottom: 1px solid transparent;
+}
+.links .link-item p:nth-of-type(1) ~ p:hover {
+  color: var(--color-text);
+  border-bottom: 1px solid var(--color-text);
+}
+
+@media screen and (max-width: 768px) {
+  .contact {
+    justify-content: center;
+    flex-direction: column;
+  }
+  .contact .logo {
+    flex-basis: 100%;
+    text-align: center;
+  }
+  .contact .links {
+    justify-content: space-evenly;
+  }
+}
+@media screen and (max-width: 480px) {
+  .contact .links {
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
 }
