--- a/src/Styles/Gtp.css
+++ b/src/Styles/Gtp.css
@@ -11,10 +11,12 @@
   );
   justify-content: space-evenly;
   height: 80vh;
+  overflow: hidden;
 }
 .gtp .intro {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 .gtp .intro p {
   color: var(--color-text);
@@ -25,6 +27,7 @@
   background-image: linear-gradient(303deg, #ae67fa -13.86%, #f49867 99.55%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  flex-wrap: wrap;
 }
 .intro h1 {
   flex-basis: 30%;
@@ -36,6 +39,7 @@
   display: flex;
   justify-content: space-between;
   gap: 40px;
+  flex-wrap: wrap;
 }
 .About .card {
   position: relative;
@@ -54,4 +58,19 @@
 }
 .card p {
   color: var(--color-text);
+}
+@media screen and (max-width: 768px) {
+  .gtp {
+    height: max-content;
+  }
+  .gtp .intro {
+    justify-content: center;
+  }
+  .gtp .intro > * {
+    flex-basis: 100%;
+    text-align: center;
+  }
+  .takeLook {
+    background-color: rgba(0, 0, 0, 0.995);
+  }
 }
