--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -4,16 +4,19 @@
   align-items: center;
   color: aliceblue;
   backdrop-filter: blur(10px);
-  position: sticky;
+  position: fixed;
   background-color: rgba(3, 27, 49, 0.212);
   top: 0px;
   padding: 20px;
-  z-index:5;
+  z-index: 5;
+  overflow-x: hidden;
+  width: -webkit-fill-available;
 }
+
 svg {
   height: 16px;
 }
-.navEle {
+.Header > .navEle {
   display: flex;
   justify-content: space-between;
   flex-basis: 40%;
@@ -31,7 +34,7 @@ svg {
   border-bottom: 2px solid #787f98;
 }
 
-.acc {
+.Header > .acc {
   display: flex;
   justify-content: space-between;
   gap: 10px;
@@ -44,7 +47,75 @@ svg {
 }
 .acc button:nth-of-type(1) {
   background-color: transparent;
+  transition: 0.3s ease-in-out;
 }
 .acc button:nth-of-type(2) {
   background-color: #ff4820;
+  transition: 0.3s ease-in-out;
+}
+.acc button:nth-of-type(1):hover {
+  text-decoration: underline;
+}
+.acc button:nth-of-type(2):hover {
+  background-color: #e0411e;
+}
+
+.menu {
+  display: none;
+  position: fixed;
+  top: 20px;
+  right: 30px;
+  z-index: 8;
+}
+.menu > button {
+  background-color: transparent;
+  color: white;
+  border: none;
+  scale: 2;
+  transition: 0.2s ease-in-out;
+}
+.menu > button:hover {
+  transform: rotate(45deg);
+}
+.menu > .items {
+  display: none;
+  position: fixed;
+  right: 30px;
+  top: 60;
+  padding: 30px;
+  border-radius: 10px;
+  backdrop-filter: blur(6px);
+  background-color: rgba(3, 27, 49, 0.712);
+}
+.menu:hover .items {
+  display: block;
+}
+.menu > .items > * {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.menu:hover .items {
+  display: block;
+}
+
+@media screen and (max-width: 768px) {
+  .Header > .navEle {
+    display: none;
+  }
+  .Header > .acc {
+    display: none;
+  }
+  .menu {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .Header > .navEle {
+    display: none;
+  }
+  .Header > .acc {
+    display: none;
+  }
 }
