--- a/src/Styles/Intro.css
+++ b/src/Styles/Intro.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   padding: 20px;
+  width: 95%;
 }
 .Intro .text {
   flex-basis: 50%;
@@ -54,8 +55,32 @@
   width: fit-content;
 }
 .brands {
+  flex-wrap: wrap;
   flex-basis: 100%;
   display: flex;
   justify-content: space-around;
   padding: 45px 0px;
+}
+
+@media screen and (max-width: 768px) {
+  .Intro img {
+    flex-basis: 100%;
+  }
+  .Intro .text {
+    flex-basis: 100%;
+  }
+  .connected {
+    text-align: center;
+  }
+  .connected img {
+    object-fit: contain;
+  }
+  .brands {
+    gap: 10px;
+    align-items: center;
+  }
+  .brands img {
+    flex-basis: 47%;
+    object-fit: scale-down;
+  }
 }
