--- a/src/Styles/Product.css
+++ b/src/Styles/Product.css
@@ -1,5 +1,4 @@
 .Product {
-  height: 80vh;
   display: flex;
   justify-content: space-around;
   padding: 20px;
@@ -10,6 +9,7 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 .Product .pro-img {
   width: 30%;
@@ -42,6 +42,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 .CTA button {
   background: black;
@@ -49,4 +50,17 @@
   padding: 15px 35px;
   border: none;
   border-radius: 20px;
+}
+
+@media screen and (max-width: 768px) {
+  /* .Feature div:nth-of-type(1) > img {
+    width: 55%;
+  } */
+  .pro-int {
+    flex-basis: 100%;
+  }
+  .CTA {
+    justify-content: center;
+    text-align: center;
+  }
 }
