--- a/src/Styles/Header.scss
+++ b/src/Styles/Header.scss
@@ -4,6 +4,11 @@
     padding: 20px 3vw;
     align-items: center;
     gap: 10px;
+    position: fixed;
+    width: 100%;
+    background-color: #00000036;
+    backdrop-filter: blur(5px);
+    z-index: 10;
 
     img {
         height: auto;
@@ -11,10 +16,9 @@
     }
 
     div {
-        // flex-basis: 100%;
+        flex-basis: 70%;
         display: flex;
-        gap: 40px;
-        justify-content: flex-end;
+        justify-content: space-evenly;
 
         a {
             font-size: 13px;
@@ -26,5 +30,12 @@
                 color: white;
             }
         }
+    }
+
+    ul {
+        display: none;
+        position: fixed;
+        top: 30px;
+        right: 20px;
     }
 }
