--- a/src/index.css
+++ b/src/index.css
@@ -65,3 +65,87 @@ body {
 .comment {
   color: var(--commentText);
 }
+
+@media screen and (max-width: 880px) {
+  .Hero {
+    gap: 30px;
+  }
+
+  .Hero .textSection {
+    flex-basis: 90%;
+    justify-content: center;
+  }
+
+  .Hero .textSection p {
+    width: 75%;
+  }
+
+  .HeroImg {
+    flex-basis: 100%;
+    height: 50vh;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .billing .billing-text,
+  .Ad .business,
+  .Ad .stats {
+    flex-basis: 100%;
+  }
+
+  .Ad .business {
+    padding: 20px;
+  }
+
+  .dealing .business {
+    flex-basis: 100%;
+    padding: 20px;
+  }
+
+  .Footer .contact .logo {
+    flex-basis: 100%;
+  }
+
+  .Footer .contact .links {
+    flex-basis: 100%;
+    font-size: 12px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .dealing {
+    flex-direction: column-reverse;
+  }
+
+  .Hero .textSection .title h2 {
+    bottom: 30px;
+  }
+
+  .get-started span {
+    flex-basis: 100%;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .Header div {
+    display: none;
+  }
+
+  .Hero .textSection {
+    font-size: 0.8em;
+  }
+
+  .Header ul {
+    display: block;
+  }
+
+  .billing > img {
+    height: auto;
+    object-fit: contain;
+    width: 100%;
+  }
+
+  .Footer .contact .links {
+    flex-direction: column;
+  }
+}
