--- a/src/Styles/Ad.scss
+++ b/src/Styles/Ad.scss
@@ -206,6 +206,12 @@
         border-radius: 10px;
         border: none;
         font-weight: 600;
+        transition: .3s;
+
+        &:hover {
+            box-shadow: 0px 0px 25px 2px #1ed9bb;
+            background-color: #66e2e7;
+        }
     }
 
 }
